--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		
 		<!-- 右侧练习Demo展示栏 默认index_right.html-->
 		<div class="iframeDiv" style="float: left; width:80%; height:100%;">
-			<iframe name="right_iframe" style="height:100%; width:100%" src="index_right.html" scrolling="yes" frameborder="0"></iframe>
+			<iframe name="right_iframe" style="height:100%; width:100%" src="html/chapter2/xiaohualang.html" scrolling="yes" frameborder="0"></iframe>
 		</div>
 
 		<!--
@@ -38,6 +38,8 @@
 			html/chapter1/base/base_css.html
 			html/chapter1/nav/nav_bilibili.html
 			html/chapter1/nav/nav_tanzhou.html
+			html/chapter2/xiaohualang.html
+			
 		-->
 	</body>
 </html>
